Issue 2842: Minimize and attach button not visible when firebug is inactive.
http://code.google.com/p/fbug/source/detail?r=6144

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -156,6 +156,13 @@ panelTab[selected="true"]:hover > panelTabMenu .menuTarget {
 }
 
 /************************************************************************************************/
+/* Detached Firebug Window */
+
+#fbResumeBox > #fbWindowButtons {
+    padding-right: 4px;
+}
+
+/************************************************************************************************/
 /* Focus related */
 
 /* Make the following selectors part of the tab order */
